--- a/src/app/pages/blog-home/blog-home.component.html
+++ b/src/app/pages/blog-home/blog-home.component.html
@@ -4,7 +4,7 @@
 
       <div class="article" *ngFor="let blog of blogs">
         <div class="left">
-          <img src="../../../assets/admin.jpg" alt="">
+          <img src="{{blog.logo}}" alt="">
         </div>
         <div class="right">
           
