--- a/src/app/admin/tests/tests.component.css
+++ b/src/app/admin/tests/tests.component.css
@@ -156,6 +156,62 @@
   width: 60vw;
   animation: fadeIn 0.3s;
 }
+/* The Modal (background) */
+.test-modal {
+  backdrop-filter: blur(20px);
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 20vh; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  animation: fadeInModal 0.3s;
+}
+
+
+
+/* Modal Content */
+.test-modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 10px;
+  border-radius: 20px;
+  width: 60vw;
+  animation: fadeIn 0.3s;
+}
+/* The Modal (background) */
+.ajout-modal {
+  backdrop-filter: blur(20px);
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 40vh; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  animation: fadeInModal 0.3s;
+}
+
+
+
+/* Modal Content */
+.ajout-modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 10px;
+  border-radius: 20px;
+  width: 40vw;
+  animation: fadeIn 0.3s;
+}
 
 /* The Modal (background) */
 .modal {
@@ -235,7 +291,3 @@ div{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.p-button-rounded:disabled{
-  color: gray;
-  box-shadow: none;
-}
