--- a/src/app/pages/draganddrop/draganddrop.component.scss
+++ b/src/app/pages/draganddrop/draganddrop.component.scss
@@ -1,3 +1,6 @@
+*{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 .root {
   display: flex;
   flex-direction: column;
@@ -7,12 +10,11 @@
 
 .app-name {
   font-size: 28px;
-  font-family: 'Lato', sans-serif;
   font-weight: bold;
 }
 
 .has-gradient-text {
-  background: -webkit-linear-gradient(#13f7f4, #2af598);
+  background: -webkit-radial-gradient(rgb(69, 127, 252),rgb(28, 132, 250));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -29,12 +31,19 @@
   min-height: 0;
 
   .board-bar {
+    width: fit-content;
+    margin: auto;
     background: rgba(gray, 0.5);
-    padding: 8px 15px;
+    padding: 8px 60px;
+    border-radius: 20px;
+    align-items: center;
+    text-align: center;
 
     .board-name {
       font-size: 20px;
       font-weight: bold;
+      text-transform: uppercase;
+      text-align: center;
       color: white;
     }
   }
@@ -43,24 +52,28 @@
     display: flex;
     flex-grow: 1;
     overflow-x: auto;
+    border-radius: 20px;
 
     .board-columns {
       display: flex;
       flex-grow: 1;
 
       .board-column {
+        
         display: flex;
         flex-direction: column;
         flex-grow: 1;
         flex-basis: 0; // to force the columns to all be the same size, regardless of content
 
-        min-width: 200px;
-        margin: 50px;
-        padding: 25px;
+        min-width: 300px;
+        margin: 25px;
+        padding-top: 25px;
+        text-align: center;
 
-        border-radius: 4px;
+        border-radius: 20px;
 
         background: rgba(white, 0.5);
+        backdrop-filter: blur(80px);
 
         &:not(:first-child) {
           margin-left: 0;
@@ -68,10 +81,10 @@
 
         .column-title {
           font-size: 20px;
-          font-weight: 800;
+          font-weight: 800;        
+          margin-bottom: 25px;
           font-family: 'Lato', sans-serif;
           text-transform: uppercase;
-          margin-bottom: 20px;
         }
       }
     }
@@ -86,10 +99,11 @@
 
 .task {
   display: flex;
+  margin: 0px 25px 25px 25px;
   padding: 15px 12px;
   background: white;
   border-bottom: solid 1px #ddd;
-  border-radius: 4px;
+  border-radius: 10px;
 
   margin-bottom: 15px;
 
