--- a/src/app/pages/offres/offres.component.css
+++ b/src/app/pages/offres/offres.component.css
@@ -31,25 +31,25 @@ body{
   width: 30vw;
 }
 
-
-
-.search-bar {
-  background: rgba(32, 132, 247, 0.8);
-  color: white;
-  font-weight: bold;
-  backdrop-filter: blur(30px);
-  height: fit-content;
-  padding: 1vw;
-  margin: 1vw;
-  border-radius: 30px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
 .main {
   background-image: url("../../../assets/Hiring-Manager-Reviewing-Resume-During-Job-Interview.jpg");
   background-size: cover;
   padding: 0px 2rem;
-  margin: 5px;
+  margin: 5px auto;
+  border-radius: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.search {
+  
+  background: rgba(32, 132, 247);
+  color: white;
+  font-weight: bold;
+  height: 30vh;
+  padding: 1vw;
+  margin: 5px 0.5vw 5px 0vw;
+  padding: 10px;
+  width: 29vw;
   border-radius: 20px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -67,8 +67,8 @@ body{
 .flex-cont {
   display: flex;
   flex-wrap: wrap;
-  padding: 1vw;
-  margin: 1vw;
+  padding: 1vw 1vw 1vw 1vw;
+  margin: 1vw 1vw 1vw 1vw;
   border-radius: 30px;
   flex-flow: column;
 }
@@ -216,8 +216,29 @@ div{
 
 .right img{
   border-radius: 20px;
-  width: 166px;
+  height: 80px;
 }
 .p-justify-between p{
   margin-left: 10px;
+}
+
+:host ::ng-deep .p-dropdown, .p-component, .p-dropdown-items-wrapper, .p-multiselect-chip, .p-multiselect , .p-multiselect-open , .ng-tns-c75-6, .p-dropdown-items, .ng-tns-c72-1{
+  border-radius: 25px;
+}
+
+:host ::ng-deep p-multiselect .p-multiselect-chip, .p-multiselect , .p-multiselect-open , .ng-tns-c75-6, .p-dropdown-items, .ng-tns-c72-1{
+  border-radius: 25px;
+}
+
+:host ::ng-deep .p-multiselect-label .ng-star-inserted{
+  border-radius: 25px;
+}
+
+:host ::ng-deep .p-chips-multiple-container{
+  border-radius: 25px;
+  width: 100%;
+}
+
+:host ::ng-deep .p-chips-multiple-container .p-chips-token ,:host ::ng-deep .p-chips-token-label ,:host ::ng-deep .p-component ,:host ::ng-deep .p-inputtext {
+  border-radius: 25px;
 }
