--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,17 @@
 @import "main-styles.scss";
 @import "../node_modules/bulma/bulma.sass";
 
-.p-button-rounded:hover{
-  
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  }
+* {
+  white-space: pre-wrap
+}
+
+.p-button-rounded:hover {
+
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.p-button-rounded:disabled {
+  color: gray;
+  background-color: white;
+  box-shadow: none;
+}
