--- a/src/app/pages/employeur/home/home.component.html
+++ b/src/app/pages/employeur/home/home.component.html
@@ -2,17 +2,19 @@
 
 <div class="sidebar">
   <div class="sidebar-brand p-justify-between">
-    <h2 (click)="router.navigate(['/offres'])" class="kamjobs">KamJobs</h2>
     <div >
-      <button pButton pRipple type="button" (click)="display = false"
-            icon="pi pi-times" class="p-button-rounded  p-button-text button-white"></button>
+      <h2 (click)="display = false" class="kamjobs">
+        <label for="">
+          <span class="las la-bars"></span>
+        </label>
+      </h2>
     </div>
+    <h2 (click)="router.navigate(['/offres'])" class="kamjobs">KamJobs</h2>
   </div>
   <div class="sidebar-menu">
     <ul>
       <li><a  [routerLink]="['/employeur/profil']"   routerLinkActive="active"><span class="las la-igloo"></span><span>Gestion Profile</span></a></li>
       <li><a [routerLink]="['/employeur/offres']"  routerLinkActive="active"><span class="las la-users"></span><span>Gestion Offres</span></a></li>
-      <!--<li><a href=""><span class="las la-shipping-fast"></span><span>Orders</span></a></li>-->
     </ul>
   </div>
 </div>
