--- a/src/app/pages/offres/offre/offre.component.css
+++ b/src/app/pages/offres/offre/offre.component.css
@@ -71,6 +71,16 @@ a:hover {
     transition: none !important;
   }
 }
+label{
+  padding: 5px 10px;
+}
+.input {
+  padding: 5px 15px;
+  margin: 5px;
+  border-radius: 25px;
+  background: rgba(255, 255, 255, 0.616);
+  backdrop-filter: blur(10px);
+}
 
 div{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
