--- a/src/app/pages/offres/offres.component.css
+++ b/src/app/pages/offres/offres.component.css
@@ -10,6 +10,9 @@ body{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+div{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 
 
 .blur {
@@ -38,18 +41,71 @@ body{
   margin: 5px auto;
   width: 70vw;
   border-radius: 20px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+
+.flex-cont {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0.5vw auto;
+  border-radius: 30px;
+  flex-flow: column;
+}
+
+.responsive-body{
+  text-align:justify;
+  display: flex;
+  justify-content:space-between;
+}
+@media (max-width:1051px) {
+  .responsive-body{
+  display: flex;
+  flex-direction: column;
+  }
+  .search {
+    height:100%;
+    min-width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  :host ::ng-deep p-multiselect .p-multiselect-chip{
+    width: 43vw;
+  }
+
+  :host ::ng-deep p-chips .p-chips-multiple-container{
+    width: 90vw;
+  }
+
+  .main {
+    width: 94vw;}
+}
+
+/* for entreprise image*/
+.column{
+    
+  display: flex;
+  flex-direction: row-reverse;
+  }
+
+@media (max-width:700px) {
+  
+  .column{
+    display: flex;
+    flex-direction: column;
+    }
 }
 
 .search {
-  
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
   background: rgba(32, 132, 247);
   color: white;
   font-weight: bold;
-  height: 30vh;
+  height:100%;
   padding: 0.5vw;
   margin: 5px 0.5vw 5px 0vw;
-  padding: 10px;
   width: 29vw;
   border-radius: 20px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -59,22 +115,12 @@ body{
   background: hsla(0, 0%, 100%, 0.800);
   backdrop-filter: blur(30px);
   height: fit-content;
-  padding: 1vw 1vw 0.5vw 1vw;
+  padding: 20px 20px 10px 20px;
   margin: 1vw;
   border-radius: 30px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.flex-cont {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 1vw auto;
-  border-radius: 30px;
-  flex-flow: column;
-}
-.dialog{
-  border-radius: 20px;
-}
 
 .p-fluid label{
   padding: 5px 10px;
@@ -128,17 +174,6 @@ body{
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
   animation: fadeInModal 0.3s;
-}
-@media (max-width:1135px) {
-  .modal{
-    padding-top: 122px;
-  }
-}
-
-@media (max-width:960px) {
-  .modal{
-    padding-top: 80px;
-  }
 }
 @keyframes fadeInModal {
   0% {opacity:0;}
@@ -196,9 +231,7 @@ body{
   display: flex;
   justify-content:space-between;
 }
-div{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
+
 
 .p-button-rounded{
   padding: 0px 16px;
@@ -215,24 +248,34 @@ div{
 }
 
 .right img{
-  border-radius: 20px;
-  height: 80px;
+  margin-left: 20px;
+  border-radius: 15px;
+  height: 60px;
 }
-.p-justify-between p{
-  margin-left: 10px;
+.details p{
+  margin: 10px;
 }
+
+.details{
+  display: flex;
+  flex-direction: row;
+  height: fit-content;
+}
+
+/* NG PRIME STYLING*/
 :host ::ng-deep .p-component{
   border-radius: 20px;
 }
-:host ::ng-deep .p-dropdown, .p-dropdown-items-wrapper, .p-multiselect-chip, .p-multiselect , .p-multiselect-open , .ng-tns-c75-6, .p-dropdown-items, .ng-tns-c72-1{
+:host ::ng-deep .p-dropdown, .p-dropdown-items-wrapper, .p-multiselect-chip, .p-multiselect , .p-multiselect-open ,  .p-dropdown-items{
   border-radius: 25px;
-  min-width: 15vw;
+  min-width: 12vw;
 }
 
-:host ::ng-deep p-multiselect .p-multiselect-chip, .p-multiselect , .p-multiselect-open , .ng-tns-c75-6, .p-dropdown-items, .ng-tns-c72-1{
+:host ::ng-deep p-multiselect .p-multiselect-chip, .p-multiselect , .p-multiselect-open , .ng-tns-c75-6, .p-dropdown-items{
   border-radius: 25px;
+  max-width: 96%;
   margin: 6px;
-  min-width: 15vw;
+  min-width: 12vw;
 }
 
 :host ::ng-deep .p-multiselect-label .ng-star-inserted{
@@ -242,7 +285,7 @@ div{
 :host ::ng-deep .p-chips-multiple-container{
   margin: 6px;
   border-radius: 25px;
-  min-width: 20vw;
+  min-width: 27vw;
   width: 100%;
 }
 
