--- a/src/app/pages/cv/cv.component.html
+++ b/src/app/pages/cv/cv.component.html
@@ -1,37 +1,51 @@
-<div class="resume">
-  <div class="resume_left">
+<button class="download-button" (click)="download()">Print 2</button> <br>
+<button  type="button" class="download-button2" icon="pi pi-palette" (click)="op.toggle($event)">Customiser votre cv</button>
+
+<p-overlayPanel #op [showCloseIcon]="true"  [style]="{width: '260px'}">
+  <ng-template pTemplate>
+    <span>color : </span>
+    <p-colorPicker [(ngModel)]="color2"></p-colorPicker> |
+    <span>font color : </span>
+    <p-colorPicker [(ngModel)]="color3"></p-colorPicker>
+
+
+  </ng-template>
+</p-overlayPanel>
+
+<div id="cv" class="resume">
+  <div style="background-color: {{color2}}" class="resume_left">
     <div class="resume_profile">
       <img src="https://scontent.ftun2-1.fna.fbcdn.net/v/t1.6435-9/94610675_2612309645724396_3824631985830100992_n.jpg?_nc_cat=110&ccb=1-3&_nc_sid=174925&_nc_ohc=LB-5A8g5qNoAX8CpCR6&_nc_ht=scontent.ftun2-1.fna&oh=002b7e7bbb2230d2c9c76f0174df9ad6&oe=60A7D585" alt="jnayah" width="40px" height="40px">
     </div>
     <div class="resume_content">
-      <div class="resume_item resume_info">
+      <div style="border-bottom: 2px solid {{color3}};"  class="resume_item resume_info">
         <div class="title">
-          <p class="bold">Mourad Slim Jnayah</p>
-          <p class="regular">Developper</p>
+          <p  class="bold">Mourad Slim Jnayah</p>
+          <p class="regular" style="color: {{color3}};">Developper</p>
         </div>
         <ul>
-          <li><div class="icon"><i class="las la-map-marked-alt"></i></div>
-              <div class="data">Sidi hssin <br> Tunisia</div>
+          <li><div class="icon"><i style="color: {{color3}};"   class="las la-map-marked-alt"></i></div>
+              <div style="color: {{color3}};"  class="data">Sidi hssin <br> Tunisia</div>
           </li>
-          <li><div class="icon"><i class="las la-phone-volume"></i></div>
-            <div class="data">+216 51 202 478</div>
+          <li><div class="icon"><i style="color: {{color3}};"   class="las la-phone-volume"></i></div>
+            <div style="color: {{color3}};"   class="data">+216 51 202 478</div>
           </li>
-          <li><div class="icon"><i class="las la-envelope-open"></i></div>
-            <div class="data">Mourad@gmail.com</div>
+          <li><div class="icon"><i style="color: {{color3}};"   class="las la-envelope-open"></i></div>
+            <div style="color: {{color3}};"   class="data">Mourad@gmail.com</div>
           </li>
-          <li><div class="icon"><i class="lab la-chrome"></i></div>
-            <div class="data">www.jnayah.com</div>
+          <li><div class="icon"><i style="color: {{color3}};"   class="lab la-chrome"></i></div>
+            <div style="color: {{color3}};"   class="data">www.jnayah.com</div>
           </li>
         </ul>
       </div>
-      <div class="resume_item resume_skills">
+      <div style="border-bottom: 2px solid {{color3}};" class="resume_item resume_skills">
         <div class="title">
           <p class="bold">Skills</p>
         </div>
         <div>
           <ul>
-            <li>
-              <div class="skill_name">
+            <li style="color: {{color3}};"  >
+              <div  class="skill_name">
                 HTML
               </div>
               <div class="skill_progress">
@@ -39,7 +53,7 @@
               </div>
               <div class="skill_per">80%</div>
             </li>
-            <li>
+            <li style="color: {{color3}};"  >
               <div class="skill_name">
                 CSS
               </div>
@@ -48,7 +62,7 @@
               </div>
               <div class="skill_per">70%</div>
             </li>
-            <li>
+            <li style="color: {{color3}};"  >
               <div class="skill_name">
                 Angular
               </div>
@@ -57,7 +71,7 @@
               </div>
               <div class="skill_per">50%</div>
             </li>
-            <li>
+            <li style="color: {{color3}};"  >
               <div class="skill_name">
                 Laravel
               </div>
@@ -69,14 +83,14 @@
           </ul>
         </div>
       </div>
-      <div class="resume_item resume_social">
+      <div style="border-bottom: 2px solid {{color3}};"  class="resume_item resume_social">
         <div class="title">
           <p class="bold">SOCIAL</p>
         </div>
         <ul>
           <li>
-            <div class="icon"><i class="lab la-facebook-f"></i></div>
-            <div class="data">
+            <div class="icon"><i style="color: {{color3}};"   class="lab la-facebook-f"></i></div>
+            <div style="color: {{color3}};"   class="data">
               <p class="semi_bold">
                 Facebook
               </p>
@@ -84,8 +98,8 @@
             </div>
           </li>
           <li>
-            <div class="icon"><i class="lab la-twitter"></i></div>
-            <div class="data">
+            <div class="icon"><i style="color: {{color3}};"   class="lab la-twitter"></i></div>
+            <div  style="color: {{color3}};"  class="data">
               <p class="semi_bold">
                 Twitter
               </p>
@@ -93,8 +107,8 @@
             </div>
           </li>
           <li>
-            <div class="icon"><i class="lab la-discord"></i></div>
-            <div class="data">
+            <div class="icon"><i style="color: {{color3}};"   class="lab la-discord"></i></div>
+            <div style="color: {{color3}};"   class="data">
               <p class="semi_bold">
                 Discord
               </p>
@@ -108,15 +122,15 @@
   </div>
 
   <div class="resume_right">
-    <div class="resume_item resume_about">
+    <div style="border-bottom: 2px solid {{color3}};"  class="resume_item resume_about">
       <div class="title">
-        <p class="bold">About us</p>
+        <p style="color: {{color2}}"  class="bold">About us</p>
       </div>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis illo fugit officiis distinctio culpa officia totam atque exercitationem inventore repudiandae?</p>
     </div>
-    <div class="resume_item resume_work">
+    <div style="border-bottom: 2px solid {{color3}};"  class="resume_item resume_work">
       <div class="title">
-        <p class="bold">Work Experience</p>
+        <p style="color: {{color2}}"   class="bold">Work Experience</p>
       </div>
       <ul>
         <li>
@@ -142,9 +156,9 @@
         </li>
       </ul>
     </div>
-    <div class="resume_item resume_education">
+    <div style="border-bottom: 2px solid {{color3}};"  class="resume_item resume_education">
       <div class="title">
-        <p class="bold">Education</p>
+        <p style="color: {{color2}}"   class="bold">Education</p>
       </div>
       <ul>
         <li>
@@ -161,17 +175,6 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, voluptatibus!</p>
           </div>
         </li>
-      </ul>
-    </div>
-    <div class="resume_item resume_hobby">
-      <div class="title">
-        <p class="bold">Hobby</p>
-      </div>
-      <ul>
-        <li><i class="fas fa-book"></i></li>
-        <li><i class="fas fa-gamepad"></i></li>
-        <li><i class="fas fa-music"></i></li>
-        <li><i class="fab fa-pagelines"></i></li>
       </ul>
     </div>
   </div>
