--- a/src/app/admin/admin.component.css
+++ b/src/app/admin/admin.component.css
@@ -79,7 +79,8 @@
     border-radius: 0px 20px;
     padding: 1rem 1.5rem;
     box-shadow: 2px 2px 6px rgba(0,0,0,0.2);
-    background-color: white;
+    background-color: #00a2ff;
+    color: white;
     position: fixed;
     width: 100%;
     top: 0;
@@ -120,7 +121,7 @@
   
   .user-wrapper small {
     display: inline-block;
-    color: #8390A2;
+    color: #d3d7db;
   }
   
   /*.user-wrapper h4 {*/
