--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -35,7 +35,7 @@
       
   
       <div class="user-wrapper">
-        <img src="https://scontent.ftun2-1.fna.fbcdn.net/v/t1.6435-9/94610675_2612309645724396_3824631985830100992_n.jpg?_nc_cat=110&ccb=1-3&_nc_sid=174925&_nc_ohc=LB-5A8g5qNoAX8CpCR6&_nc_ht=scontent.ftun2-1.fna&oh=002b7e7bbb2230d2c9c76f0174df9ad6&oe=60A7D585" alt="jnayah" width="40px" height="40px">
+        <img src="https://scontent.ftun2-1.fna.fbcdn.net/v/t1.6435-9/94610675_2612309645724396_3824631985830100992_n.jpg?_nc_cat=110&ccb=1-3&_nc_sid=174925&_nc_ohc=LB-5A8g5qNoAX8CpCR6&_nc_ht=scontent.ftun2-1.fna&oh=002b7e7bbb2230d2c9c76f0174df9ad6&oe=60A7D585" alt="admin photo" width="40px" height="40px">
         <div>
           <h4>Mourad Jnayah</h4>
           <small>Super Admin</small>
