--- a/src/app/pages/employeur/home/home.component.css
+++ b/src/app/pages/employeur/home/home.component.css
@@ -79,7 +79,8 @@ header{
   border-radius: 0px 20px;
   padding: 1rem 1.5rem;
   box-shadow: 2px 2px 6px rgba(0,0,0,0.2);
-  background-color: white;
+  background-color: #00a2ff;
+  color: white;
   position: fixed;
   width: 100%;
   top: 0;
@@ -120,7 +121,7 @@ header{
 
 .user-wrapper small {
   display: inline-block;
-  color: #8390A2;
+  color: #d3d7db;
 }
 
 /*.user-wrapper h4 {*/
@@ -142,9 +143,9 @@ header label span {
 main {
   background-image:url("../../../../assets/apps.46003.14259451864568504.ad5e5d07-0fbb-46ed-b9b6-a1b781645691.jpg");
   border-radius: 20px;
-  margin-top: 40px;
+  margin-top: 80px;
   padding: 2rem 1.5rem;
-  min-height: calc(100vh - 170px);
+  min-height: 75vh;
 }
 
 .cards {
