--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 </ng-template>
 <ng-template #user>
   <app-official-nav-and-search class="navbar"></app-official-nav-and-search>
-  <div class="router">
+  <div >
     <router-outlet></router-outlet>
   </div>
 </ng-template>
