--- a/src/app/pages/societe-cards/societe-cards.component.css
+++ b/src/app/pages/societe-cards/societe-cards.component.css
@@ -5,7 +5,7 @@
 }
 
 .flex-container {
-  margin-top: 1%;
+  margin-top: 80px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
