--- a/src/app/pages/offres/offres.component.html
+++ b/src/app/pages/offres/offres.component.html
@@ -50,8 +50,8 @@
             </div>
           </div>
           <div>
-            <p class="product-category">
-              {{offre.description_emploi | slice:0:250}} ...</p>
+            <p class="product-category" [innerHTML]="offre.description_emploi | slice:0:250">...
+               </p>
           </div>
         </div>
         <div class="details">
